--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^7.5.1",
+    "@mantine/hooks": "^7.5.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
