--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.5.1",
+    "@mantine/form": "^7.5.1",
     "@mantine/hooks": "^7.5.1",
     "@tabler/icons-react": "^2.47.0",
     "react": "^18.2.0",
