--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,9 +23,9 @@
     /** Alias */
     "baseUrl": ".",
     "paths": {
-      "~/*": [
-        "src/*"
-      ],
+//      "~/*": [
+//        "src/*"
+//      ],
       "@*": [
         "./src/*"
       ]
